Update Copyright Notice

--- a/src/MultiPlug.Ext.Thm.Default2016/Controllers/Settings/SettingsHome.cshtml
+++ b/src/MultiPlug.Ext.Thm.Default2016/Controllers/Settings/SettingsHome.cshtml
@@ -52,8 +52,7 @@
             <h3 class="box-header">Copyright</h3>
             <div class="box non-collapsible">
                 <div class="row-fluid">
-                    <div class="span6">1</div>
-                    <div class="span6">2</div>
+                    <div class="span12">Theme based on AdminFlare v1.3.0 Extended License by <a target="_blank" href="https://wrapbootstrap.com/user/smnedelko">Sergei Nedelko</a></div>
                 </div>
             </div>
         </div>
